Fix missing color vars

--- a/_sass/components/_all.scss
+++ b/_sass/components/_all.scss
@@ -1,6 +1,7 @@
 // Variables present in USWDS <2.0
 $nav-width: 951px !default;
 $medium-screen: 600px !default;
+$color-blue: #0071bc !default;
 $color-primary: $color-blue !default;
 
 @import 'alt-color-section';
